.collapse in .nav-responsive did not behave correctly on >sm

--- a/src/Smartstore.Web/wwwroot/shared/_nav.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_nav.scss
@@ -352,7 +352,7 @@
             display: flex;
         }
 
-        .collapse {
+        .nav-collapse.collapse {
             display: block;
         }
     }
